[gd_scene load_steps=2 format=3 uid="uid://cxgrddf7oqmy6"]

[ext_resource type="Script" path="res://scripts/ui.gd" id="1_o4qom"]

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_o4qom")

[node name="ButtonContainerUI" type="HBoxContainer" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -88.5
offset_top = -41.0
offset_right = 88.5
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Stone" type="Button" parent="ButtonContainerUI"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "Stone"

[node name="Grass" type="Button" parent="ButtonContainerUI"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "Grass"

[node name="Water" type="Button" parent="ButtonContainerUI"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "Water
"

[node name="Dirt" type="Button" parent="ButtonContainerUI"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "Dirt
"

[node name="Snow" type="Button" parent="ButtonContainerUI"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "Snow
"

[node name="ObjectivesUI" type="VBoxContainer" parent="."]
offset_left = 10.0
offset_top = 10.0
offset_right = 1142.0
offset_bottom = 55.0
alignment = 1

[node name="RichTextLabel" type="RichTextLabel" parent="ObjectivesUI"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 36
bbcode_enabled = true
text = "place_holder text"
fit_content = true
scroll_active = false
text_direction = 1

[connection signal="pressed" from="ButtonContainerUI/Stone" to="." method="handle_stone"]
[connection signal="pressed" from="ButtonContainerUI/Grass" to="." method="handle_grass"]
[connection signal="pressed" from="ButtonContainerUI/Water" to="." method="handle_water"]
[connection signal="pressed" from="ButtonContainerUI/Dirt" to="." method="handle_dirt"]
[connection signal="pressed" from="ButtonContainerUI/Snow" to="." method="handle_snow"]
